# GenDC

./: .gitignore  README.md  meson.build  meson_options.txt  pyproject.toml  requirement.txt  setup.py
.github/workflows/: Release.yml  api-check.yml  python-publish.yml
gendc_cpp/: README.md  gendc_common.h  meson.build  meson_options.txt
gendc_cpp/gendc/: gendc.cpp  meson.build
gendc_cpp/gendc_separator/: ComponentHeader.h  ContainerHeader.h  Descriptor.h  PartHeader.h  data_int_key.h  data_str_key.h  tools.h
gendc_cpp/genicam/: data_str_key.h  pfnc_converter.h  pfnc_mapping.h  sfnc_values.h
gendc_cpp/gst/gendcparse/: gstcomponentparse.c  gstcomponentparse.h  gstgendcparse.c  gstgendcparse.h  gstpartparse.c  gstpartparse.h  meson.build
gendc_cpp/include/: gendc.h
gendc_cpp/test/: meson.build
gendc_cpp/test/check/: meson.build
gendc_cpp/tests/check/: meson.build
gendc_cpp/tests/check/elements/: gendcparse.c
gendc_cpp/tests/files/: kizashi.json
gendc_python/: __init__.py  version.py
gendc_python/gendc_separator/: __init__.py  component.py  descriptor.py  part.py
gst/: README.md  gst-gendc-inspect.in  gst-gendc-launch.in  meson.build  pipelines.md  vcpkg.json
gst/src/: gstgendcseparator.c  gstgendcseparator.h
gst/test/: single_frame_test.py  test.py
gst_plugin/: meson.build
gst_plugin/src/: gstgendcparser.c  gstgendcparser.h
script/: generate_converter.py
src/: check_pixel_format_update.py  generate_converter.py
test/: CMAKELists.txt  README.md  data_properties.py  test.cpp  test.py
test/generated_stub/: content.txt
