option('gendcparse', type : 'feature', value : 'auto')

# Common options
option('package-name', type : 'string', yield : true,
       description : 'package name to use in plugins')

option('gendcseparator-dir', type: 'string', value: 'gendc_separator', description: 'Path to the GenDC Separator directory')

